# grazing-farms-identification

grazing-farms-identification/: Makefile  README.md  pyproject.toml  requirements.txt
grazing-farms-identification/config/: config.yaml
grazing-farms-identification/docs/: QA_checklist.md  flowchart.md
grazing-farms-identification/scripts/: run_pipeline.sh
grazing-farms-identification/src/: apply_farm_on_grazing.py  consensus_mask.py  dem_slope_reclass.py  farm_aoi_mask.py  farm_boundary_raster.py  farm_grazing_to_shp.py  indices.py  mask_indices.py  pipeline.py  resample.py  s3_fetch.py
